# opengem

./: .env.development  .env.example  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.opencode/agents/: backend-developer.md  frontend-developer.md
docs/: development-setup.md
scripts/: env-check.mjs
src/: App.css  App.jsx  App.tsx  README.md  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/sql/migrations/: 001_init.sql  002_llm_settings.sql  003_llm_provider_id.sql  003_operation_mode_default.sql  004_chat_session.sql  005_operation_mode_agents.sql  006_seed_default_mode_agents.sql  007_chat_sessions_mode_name.sql  008_agent_role.sql  009_app_window_state.sql  010_operation_mode_project_paths.sql  011_chat_session_project_paths.sql  013_operation_mode_default_model.sql  014_provider_credentials.sql  015_provider_settings.sql  016_openai_auth_preferences.sql
src-tauri/sql/queries/operation_mode/: delete_all.sql  delete_by_name.sql  insert.sql  select_all.sql  select_first.sql  update_selected.sql
src-tauri/src/: app_state.rs  main.rs  migrations.rs
src-tauri/src/commands/: mod.rs  operation_mode.rs  session.rs  settings.rs  settings_types.rs  workspace.rs
src-tauri/src/repositories/: settings_repository.rs
src/data/: appData.ts  (+1 more)
(+117 files in other folders)
